WIP - Project Setup
Actor system setup with migrations, base Portal & API created

--- a/src/FarmCraft.Community.Api/FarmCraft.Community.Api.csproj
+++ b/src/FarmCraft.Community.Api/FarmCraft.Community.Api.csproj
@@ -9,8 +9,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Akka" Version="1.4.38" />
+    <PackageReference Include="Akka.DependencyInjection" Version="1.4.38" />
+    <PackageReference Include="Akka.Remote" Version="1.4.38" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FarmCraft.Community.Data\FarmCraft.Community.Data.csproj" />
   </ItemGroup>
 
 </Project>
