--- a/src/FarmCraft.Community.Api/FarmCraft.Community.Api.csproj
+++ b/src/FarmCraft.Community.Api/FarmCraft.Community.Api.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Akka" Version="1.4.38" />
     <PackageReference Include="Akka.DependencyInjection" Version="1.4.38" />
     <PackageReference Include="Akka.Remote" Version="1.4.38" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.5" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
