--- a/src/FarmCraft.Community.Api/FarmCraft.Community.Api.csproj
+++ b/src/FarmCraft.Community.Api/FarmCraft.Community.Api.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FarmCraft.Community.Data\FarmCraft.Community.Data.csproj" />
+    <ProjectReference Include="..\FarmCraft.Community.Services\FarmCraft.Community.Services.csproj" />
   </ItemGroup>
 
 </Project>
